# dummy_repo_githubactions_python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python_ci.yml
src/arithmetic/: operations.py
tests/: test_operations.py
