[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "arithmetic"
version = "0.1.0"
description = "A dummy Python project for GitHub Actions CI/CD demo"
authors = [{ name = "Suhas", email = "john.doe@example.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = ["numpy~=2.3.1"]

[project.optional-dependencies]
test = [
    "pytest~=8.4.1",
    "pytest-cov~=6.2.1",
]

dev = [
    # Directly include deps from test and examples, plus dev-specific
    "pytest~=8.4.1",
    "pytest-cov~=6.2.1",
    "ruff~=0.6.9",
    "black~=24.8.0",
    "mypy~=1.11.2",
    "pylint~=3.2.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]


